Fixed textarea in HTML--found original unbroken CSS and want to try to refactor this

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ label{
 	font-size: 10px;
 	display: block; 
 	margin: 10px 0px 10px 0px;
+	color: #353567;
 }
 #logo{
 	margin: 20px 0px 10px 20px;
